# converge-traits

./: AGENTS.md  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml
src/: agent.rs  backend.rs  capability.rs  context.rs  effect.rs  error.rs  fact.rs  invariant.rs  lib.rs  llm.rs  selection.rs  tests.rs
