[package]
name = "converge-traits"
version = "0.1.0"
edition = "2021"
authors = ["Kenneth Pernyer <kenneth@aprio.one>"]
description = "Core traits and types for the Converge platform"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
serde_json = "1.0"
