[package]
name = "converge-traits"
version = "0.3.1"
edition = "2024"
authors = ["Kenneth Pernyer <kenneth@aprio.one>"]
description = "The public trait contract for the Converge platform — convergence engine traits and generic backend abstraction"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
serde_json = "1.0"
